--- a/src/ShadowSpawn.vcxproj.filters
+++ b/src/ShadowSpawn.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -36,7 +36,7 @@
     <ClCompile Include="CFilespecCopyFilter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CHoboCopyException.cpp">
+    <ClCompile Include="CShadowSpawnException.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CIncludeAllCopyFilter.cpp">
@@ -60,7 +60,7 @@
     <ClCompile Include="CWriterComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="HoboCopy.cpp">
+    <ClCompile Include="ShadowSpawn.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="OutputWriter.cpp">
@@ -95,7 +95,7 @@
     <ClInclude Include="CFilespecCopyFilter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CHoboCopyException.h">
+    <ClInclude Include="CShadowSpawnException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CIncludeAllCopyFilter.h">
