Removed support for the statefile and incremental backups

--- a/src/ShadowSpawn.vcxproj
+++ b/src/ShadowSpawn.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug-W2K3|Win32">
@@ -572,7 +572,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CBackupState.cpp" />
     <ClCompile Include="CComException.cpp" />
     <ClCompile Include="CCopyAction.cpp" />
     <ClCompile Include="CCopyFilter.cpp" />
@@ -606,7 +605,6 @@
     <ClCompile Include="Utilities.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CBackupState.h" />
     <ClInclude Include="CComException.h" />
     <ClInclude Include="CCopyAction.h" />
     <ClInclude Include="CCopyFilter.h" />
